# pytaskforce

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  dev.ps1  docker-compose.yml  document.json  install.ps1  install.sh  muster-ordnungsgemaesse-rechnung-data.md  plan.md  pyi_rth_tiktoken.py  pyproject.toml  run-test.ps1  scratchpad.md  start_server.py  taskforce.spec  taskforce_specification.html  temp_bing.html  test_cli_ui.py  test_early_comp.py  test_enum.py  test_mcp_validation.py  test_results.json
.autooptim/: evolve_log.jsonl  experiments_history.md  last_eval_trace.md
.bmad-core/: core-config.yaml.bak  install-manifest.yaml
.claude/: ralph-loop.local.md  settings.local.json
.forge/: project.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.taskforce_accounting/: learned_rules.yaml  rules_history.jsonl
agents/butler/: README.md  pyproject.toml
agents/butler/configs/: butler.agent.md
agents/butler/configs/custom/: accountant.yaml  browser-agent.yaml  memory_specialist.yaml  pc-agent.yaml  research_agent.yaml  research_specialist.yaml  vision_ocr.yaml
agents/butler/configs/roles/: accountant.agent.md  accountant.yaml  personal_assistant.agent.md  personal_assistant.yaml
agents/butler/src/taskforce_butler/: __init__.py  daemon.py  daemon_supervisor.py  event_router.py  role_loader.py  rule_engine.py  service.py
agents/butler/src/taskforce_butler/cli/: __init__.py  commands.py
agents/butler/src/taskforce_butler/domain/: __init__.py  butler_role.py  trigger_rule.py
agents/butler/src/taskforce_butler/infrastructure/: __init__.py
agents/butler/src/taskforce_butler/infrastructure/event_sources/: __init__.py  calendar_source.py  webhook_source.py
agents/butler/src/taskforce_butler/infrastructure/scheduler/: __init__.py  scheduler_service.py
agents/butler/src/taskforce_butler/infrastructure/tools/: __init__.py  email_tool.py  reminder_tool.py  rule_manager_tool.py  schedule_tool.py  send_notification_tool.py
agents/butler/src/taskforce_butler/interfaces/: __init__.py  butler.py
agents/butler/tests/: __init__.py
agents/coding-agent/: pyproject.toml
agents/coding-agent/configs/: coding_agent.yaml  coding_analysis.yaml
agents/coding-agent/configs/custom/: code_reviewer.yaml  coding_planner.yaml  coding_reviewer.yaml  coding_worker.yaml
agents/coding-agent/src/taskforce_coding_agent/: __init__.py  task_complexity_classifier.py
agents/coding-agent/src/taskforce_coding_agent/cli/: __init__.py
agents/coding-agent/src/taskforce_coding_agent/infrastructure/tools/: __init__.py  sub_agent_tool.py
agents/google-workspace/: README.md  pyproject.toml
agents/google-workspace/src/taskforce_google_workspace/: __init__.py  calendar.py  drive.py  gmail.py
agents/pinchbench-agent/: pyproject.toml
agents/pinchbench-agent/configs/: pinchbench.yaml
agents/pinchbench-agent/configs/custom/: transcript_extractor.yaml
agents/pinchbench-agent/src/taskforce_pinchbench_agent/: __init__.py
agents/rag-agent/: pyproject.toml
agents/rag-agent/configs/: rag_agent.yaml
agents/rag-agent/src/taskforce_rag_agent/: __init__.py
agents/rag-agent/src/taskforce_rag_agent/cli/: __init__.py
agents/rag-agent/src/taskforce_rag_agent/tools/: __init__.py  citations.py  get_document_tool.py  global_document_analysis_tool.py  list_documents_tool.py  semantic_search_tool.py
agents/security-agent/: pyproject.toml
agents/security-agent/src/taskforce_security_agent/: __init__.py
ap-ledger/: .env.example  CLAUDE.md  README.md  claude_runner.py  requirements.txt  telegram_bot.py
cli/: pyproject.toml
cli/src/taskforce_cli/: __init__.py  agent_discovery.py  main.py
cli/src/taskforce_cli/commands/: serve.py  up.py
configs/: coding_agent.yaml  dev.yaml  devops_agent.yaml  llm_config.yaml  longrun_coding_agent.yaml  longrun_init_agent.yaml  orchestrator.yaml  rag_agent.yaml  text2sql_agent.yaml
docs/: SEPARABILITY_NESTED_FIX.md  adr-022-followups.md  agent-config-format.md  api.md  architecture-slides.html  architecture.md  architecutre.md  chat-ui.md  cli.md  code-review-2026-05-followups.md  cowork-comparison.md  document_extraction_architecture.md  enterprise-saas-roadmap.md  examples.md  improvements.md  index.md  install.md  integration-guide.md  integrations.md  optimization-report.md  pinchbench-optimization-2026-05.md  plugins.md  prd.md  profiles.md  ralph.md  recommendations.md  setup.md  slash-commands.md  testing.md
evals/: REPORT.md  analyze_changes.py  analyze_diffs.py  analyze_failures.py  analyze_failures_v2.py  analyze_sandbox_events.py  check_testing.py  check_testing_v2.py  compare_runs.py  debug_metadata.py  inspect_detail.py  inspect_events.py  inspect_sample.py  run_eval.py  run_swe_bench_wsl.sh  wsl_install.sh  wsl_run_swebench.sh
examples/: README.md  check_accounting_memory.py  check_memory_tools.py  memory_demo.py
logs/: 2026-03-15T16-09-47+00-00_swe-bench-verified-mini_n2s6f6GmzzYoTZQv33PJAz.eval  2026-03-15T18-27-26+00-00_swe-bench-verified-mini_dYibKVBDmbwhMYoYMiTSd2.eval  2026-03-15T19-06-38+00-00_swe-bench-verified-mini_gixHApWJhChhrmHmGvC5Ln.eval  2026-03-15T19-17-48+00-00_swe-bench-verified-mini_U6emGtgDz7ZCQqNJ28wNig.eval  2026-03-16T20-14-46+00-00_swe-bench-verified-mini_atW2M8tfvYULtctKTvmEvm.eval  2026-03-17T10-32-01+00-00_swe-bench-verified-mini_oRe44uY8MDJcEqqKtHz6Pf.eval
notebooks/: acp_showcase.ipynb  analysis_lib.py  butler_analysis.ipynb  epic_orchestrator_analysis.ipynb  gateway_analysis.ipynb  mcp_analysis.ipynb  memory_wiki_analysis.ipynb  pinchbench_analysis.ipynb  skills_analysis.ipynb  (+4 more)
servers/document-extraction-mcp/: README.md  pyproject.toml
servers/document-extraction-mcp/src/document_extraction_mcp/: __init__.py  server.py
servers/document-extraction-mcp/src/document_extraction_mcp/prompts/: chart_analysis.txt  table_analysis.txt
servers/document-extraction-mcp/src/document_extraction_mcp/tools/: __init__.py  _stdio_silence.py  crop.py  layout.py  ocr.py  pdf_utils.py  reading_order.py  visualization.py  vlm.py
(+1892 files in other folders)
