[project]
name = "taskforce"
version = "0.1.0"
description = "Production-grade multi-agent orchestration framework with Clean Architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Taskforce Team", email = "taskforce@example.com" }
]
keywords = [
    "agent",
    "multi-agent",
    "llm",
    "ai",
    "automation",
    "orchestration",
    "react-loop",
    "clean-architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    # Core LLM
    "litellm>=1.7.7",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=7.0.0",
    # Web API
    "fastapi>=0.116.1",
    "uvicorn>=0.25",
    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    # Async I/O
    "aiofiles>=23.2.1",
    "aiohttp>=3.9",
    # Configuration
    "pyyaml>=6.0",
    # Logging
    "structlog>=24.2.0",
    # Azure AI Search (RAG)
    "azure-search-documents>=11.6.0",
    # MCP integration
    "mcp>=1.0.0",
    # Clipboard
    "pyperclip>=1.8.2",
    # Tracing (Arize Phoenix)
    "arize-phoenix-otel>=0.6.0",
    "openinference-instrumentation-litellm>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/rudi77/pytaskforce"
Repository = "https://github.com/rudi77/pytaskforce"
Documentation = "https://github.com/rudi77/pytaskforce#readme"
Issues = "https://github.com/rudi77/pytaskforce/issues"

[project.scripts]
taskforce = "taskforce.api.cli.main:app"

# Entry points for plugin system
# These are populated by optional packages like taskforce-enterprise
[project.entry-points."taskforce.plugins"]
# enterprise = "taskforce_enterprise.integration.plugin:EnterprisePlugin"

[project.entry-points."taskforce.middleware"]
# auth = "taskforce_enterprise.api.middleware.auth:AuthMiddleware"

[project.entry-points."taskforce.routers"]
# admin = "taskforce_enterprise.api.routes.admin:router"

[project.entry-points."taskforce.factory_extensions"]
# enterprise = "taskforce_enterprise.integration.factory_extensions:extend_factory"

[project.optional-dependencies]
personal-assistant = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]
rag = [
    "azure-search-documents>=11.4.0",
]
browser = [
    "playwright>=1.40.0",
]
pdf = [
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "pdf2image>=1.16.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
]
build = [
    "build>=1.0.0",
    "twine>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.7",
    "types-PyYAML>=6.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--timeout=30",
    "--cov=taskforce",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "aiofiles.*",
    "azure.*",
    "pypdf.*",
    "pdfplumber.*",
    "pdf2image.*",
    "reportlab.*",
    "PIL.*",
    "playwright.*",
    "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "taskforce.core.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


