[project]
name = "taskforce"
version = "0.2.0"
description = "Production-grade multi-agent orchestration framework with Clean Architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Taskforce Team", email = "taskforce@example.com" }
]
keywords = [
    "agent",
    "multi-agent",
    "llm",
    "ai",
    "automation",
    "orchestration",
    "react-loop",
    "clean-architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    # Core LLM
    "litellm>=1.7.7",
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    # Web API
    "fastapi>=0.116.1",
    "uvicorn>=0.25",
    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Async I/O
    "aiofiles>=23.2.1",
    "aiohttp>=3.9",
    # Configuration
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    # Logging
    "structlog>=24.2.0",
    # MCP integration
    "mcp>=1.0.0",
    "ddgs>=9.11.4",
    # PDF processing (always included)
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "pdf2image>=1.16.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "docling>=2.0.0",
    # Browser automation (browser tool) — playwright runtime ships by default;
    # browser binaries still need ``playwright install chromium`` once.
    "playwright>=1.40.0",
    # Office documents (docx/pptx/excel tools)
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    # Token counting (TokenEstimator)
    "tiktoken>=0.5.0",
    # Encryption for settings store + encrypted token store
    "cryptography>=41.0.0",
    # FileWatcher event source
    "watchdog>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/rudi77/pytaskforce"
Repository = "https://github.com/rudi77/pytaskforce"
Documentation = "https://github.com/rudi77/pytaskforce#readme"
Issues = "https://github.com/rudi77/pytaskforce/issues"

[project.scripts]
taskforce = "taskforce.api.cli.main:app"

# Entry points for plugin system
# These are populated by optional packages like taskforce-enterprise
[project.entry-points."taskforce.plugins"]
# enterprise = "taskforce_enterprise.integration.plugin:EnterprisePlugin"

[project.entry-points."taskforce.middleware"]
# auth = "taskforce_enterprise.api.middleware.auth:AuthMiddleware"

[project.entry-points."taskforce.routers"]
# admin = "taskforce_enterprise.api.routes.admin:router"

[project.entry-points."taskforce.factory_extensions"]
# enterprise = "taskforce_enterprise.integration.factory_extensions:extend_factory"

[project.optional-dependencies]
rag = [
    "azure-search-documents>=11.4.0",
]
# Browser / office / tokenizer / auth / event-sources-fs are now part of the
# core dependencies. The empty extras are kept so existing
# ``uv sync --extra <name>`` invocations and downstream docs keep working.
browser = []
pdf = []
tokenizer = []
auth = []
office = []
event-sources-fs = []
postgres = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
]
tracing = [
    "arize-phoenix-otel>=0.6.0",
    "openinference-instrumentation-litellm>=0.1.0",
]
build = [
    "build>=1.0.0",
    "twine>=5.0.0",
]
evals = [
    "inspect-ai>=0.3.130",
    "inspect-evals[swe_bench]>=0.3.0",
]
acp = [
    "acp-sdk>=1.0.0,<2.0.0",
    # acp-sdk 1.0.x still references ``uvicorn.config.LoopSetupType``,
    # which was renamed to ``LoopFactoryType`` around uvicorn 0.36. Pin to
    # the last compatible release until acp-sdk catches up.
    "uvicorn>=0.30,<0.36",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.7",
    "notebook>=7.5.6",
    "matplotlib>=3.8",          # for notebooks/analysis_lib.py plots
    "nest-asyncio>=1.6",        # for top-level await guards in notebooks
    "types-PyYAML>=6.0",
    "pyinstaller>=6.0.0",
    # Bundled agent packages — installed editable from the workspace so
    # ``uv sync`` makes butler / coding_agent / rag_agent discoverable.
    "taskforce-butler",
    "taskforce-coding-agent",
    "taskforce-rag-agent",
    "taskforce-google-workspace",
    "taskforce-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Include the compiled web UI even though ``src/taskforce/api/_ui/`` is a
# build artifact ignored by VCS. The build pipeline (Docker image,
# PyInstaller bundle, release workflow) runs ``pnpm build`` in ui/ and
# copies ui/dist there before ``uv build``. When the directory is absent
# this glob simply matches nothing, so a plain ``uv sync`` for local
# development keeps working unchanged.
artifacts = [
    "src/taskforce/api/_ui/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/taskforce", "cli/src/taskforce_cli"]

# uv workspace — keeps the framework + unified CLI + all bundled agent packages in
# sync so a single ``uv sync`` installs everything editable. Without this the
# agent packages live in agents/ but are absent from the venv, and
# ProfileLoader sees no butler / coding_agent / rag_agent profiles.
[tool.uv.workspace]
members = [
    "cli",
    "agents/butler",
    "agents/coding-agent",
    "agents/rag-agent",
    "agents/google-workspace",
]

# Each agent package depends on the published "taskforce" name. Route those
# back to the in-tree workspace member so editable installs use this checkout.
[tool.uv.sources]
taskforce = { workspace = true }
taskforce-cli = { workspace = true }
taskforce-butler = { workspace = true }
taskforce-coding-agent = { workspace = true }
taskforce-rag-agent = { workspace = true }
taskforce-google-workspace = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "spec: ties a test to a docs/spec claim, e.g. @pytest.mark.spec('gateway.handle_message')",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--timeout=30",
    "--cov=taskforce",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "aiofiles.*",
    "azure.*",
    "pypdf.*",
    "pdfplumber.*",
    "pdf2image.*",
    "reportlab.*",
    "PIL.*",
    "playwright.*",
    "yaml.*",
    "docx.*",
    "pptx.*",
    "openpyxl.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "taskforce.core.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
