[project]
name = "taskforce-cli"
version = "0.1.0"
description = "Unified CLI for Taskforce agent framework and pre-built agents"
requires-python = ">=3.11"
dependencies = [
    "taskforce",
]

[project.optional-dependencies]
butler = ["taskforce-butler"]
coding = ["taskforce-coding-agent"]
rag = ["taskforce-rag-agent"]
all = [
    "taskforce-butler",
    "taskforce-coding-agent",
    "taskforce-rag-agent",
]

[project.scripts]
taskforce = "taskforce_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskforce_cli"]
