[project]
name = "taskforce-butler"
version = "0.3.0"
description = "Butler agent — YAML-only configuration package (ADR-028)"
requires-python = ">=3.11"
dependencies = [
    "taskforce",
    # The butler profile uses Google Workspace tools by default; their
    # implementation lives in the sibling package.
    "taskforce-google-workspace",
]

# Discovered by the unified taskforce CLI via
# taskforce.application.agent_plugin_registry. Only ``taskforce.config_dirs``
# is declared now — Butler ships no Python tool or CLI app any more
# (Phases 1-4 of the Butler → YAML refactor, ADR-026 / ADR-027 / ADR-028).
[project.entry-points."taskforce.config_dirs"]
butler = "taskforce_butler:configs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Data-only wheel: ships the minimal ``taskforce_butler`` shim package
# (just ``__init__.py``) plus the YAML configs/ tree, rewired so the
# entry-point value ``taskforce_butler:configs`` resolves to a real
# filesystem path inside the wheel.
[tool.hatch.build.targets.wheel]
packages = ["src/taskforce_butler"]
force-include = { "configs" = "taskforce_butler/configs" }
