[project]
name = "taskforce-coding-agent"
version = "0.1.0"
description = "Coding agent for Taskforce - multi-agent orchestration with planner/worker/reviewer sub-agents"
requires-python = ">=3.11"
dependencies = [
    "taskforce",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskforce_coding_agent"]
