[project]
name = "taskforce-google-workspace"
version = "0.1.0"
description = "Google Workspace integration for taskforce agents (Gmail, Drive, Calendar)"
requires-python = ">=3.11"
dependencies = [
    "taskforce",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]

# Discovered by the unified taskforce CLI via
# taskforce.application.agent_plugin_registry. Each tool short-name resolves
# to "module:ClassName".
[project.entry-points."taskforce.tools"]
gmail = "taskforce_google_workspace.gmail:GmailTool"
google_drive = "taskforce_google_workspace.drive:GoogleDriveTool"
calendar = "taskforce_google_workspace.calendar:CalendarTool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskforce_google_workspace"]
