[project]
name = "taskforce-rag-agent"
version = "0.1.0"
description = "RAG agent - Azure AI Search integration for semantic search and document retrieval"
requires-python = ">=3.11"
dependencies = [
    "taskforce",
    "azure-search-documents>=11.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskforce_rag_agent"]
