[project]
name = "taskforce-rag-agent"
version = "0.1.0"
description = "RAG agent - Azure AI Search integration for semantic search and document retrieval"
requires-python = ">=3.11"
dependencies = [
    "taskforce",
    "azure-search-documents>=11.4.0",
]

# Discovered by taskforce.application.agent_plugin_registry.
[project.entry-points."taskforce.config_dirs"]
rag_agent = "taskforce_rag_agent:configs"

[project.entry-points."taskforce.tools"]
rag_semantic_search = "taskforce_rag_agent.tools.semantic_search_tool:SemanticSearchTool"
rag_list_documents = "taskforce_rag_agent.tools.list_documents_tool:ListDocumentsTool"
rag_get_document = "taskforce_rag_agent.tools.get_document_tool:GetDocumentTool"
global_document_analysis = "taskforce_rag_agent.tools.global_document_analysis_tool:GlobalDocumentAnalysisTool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskforce_rag_agent"]
