[project]
name = "taskforce-security-agent"
version = "0.1.0"
description = "Security-hardened agent profile for Taskforce"
requires-python = ">=3.11"
dependencies = ["taskforce"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskforce_security_agent"]
